Try to fix failing CI